# Lab3_Object-oriented-programming

./: README.md  pyproject.toml
examples/: animal_abc.py  polygon_abc.py  rational.py
tasks/: task1.py  task2.py  triad_date.py
tasks/series_package/: series.py
tests/: test_tasks.py
