[project]
name = "oop3"
version = "0.1.0"
description = "oop3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "pre-commit>=4.3.0",
    "pyarrow>=15.0.2",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "flake8-pyproject>=1.2.3",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "setuptools>=75.6.0",
    "pre-commit>=4.0.1"
]

[build-system]
requires = ["setuptools>=75.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build",
    "dist", "node_modules", "site-packages", "venv"
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --tb=short -p no:warnings"
testpaths = ["tests"]
pythonpath = ["tasks","examples"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
]
